# ai-projects

./: .gitignore  AGENTS.md  AI_RAG_Agents_University_Sessions_Plan.md  AI_Sessions_Overview.md  CLAUDE.md  DEMOS_README.md  FIXES_APPLIED.md  GEMINI.md  LangChain- Agentic AI Engineering with LangChain &_content.md  README.md  README_ollama_models.md  add_slides.py  add_slides_to_pptx.py  chat_history.db  fix_demo_imports.py  global_error_handling.py  global_fix.py  model_test_results.json  model_test_results.md  pyproject.toml  run_demos.py  shared_utils.py  supported_models.py  test_all_demos.py  test_models.py  update_groq_refs.py
agents/adaptive-rag/: pyproject.toml
agents/agent-executor/: main.py  nodes.py  pyproject.toml  react.py
agents/ai-job-search/: README.md  agent.py  models.py
agents/airline-assistant/: README.md
agents/autonomous-deal-scanner/: README.md
agents/corrective-rag/: ingestion.py
agents/corrective-rag/graph/chains/: generation.py  retrieval_grader.py
agents/ecommerce-agent/: README.md  main.py
agents/multimodal-assistant/: README.md
agents/reflexion-agent/: chains.py  llm.py  main.py
agents/self-rag/: main.py
courses/datacamp/LLMs/MCP/: mcp_api.py  mcp_db.py
demos/: main.py
demos/01_langchain/: 01_langchain_core_concepts.py  02_working_with_llms.py  03_prompt_messages.py  04_prompt_templates_all.py  05_output_parsers_demo.py  06_output_parsers_final.py  07_chains_v1.py  smart_bot_section1.py
demos/02_ingestion/: 01_document_loaders.py  03_embeddings.py  04_embeddings_deep.py  05_vector_stores.py
demos/03_rag/: 01_rag_pipeline.py  02_advanced_rag.py  03_conversation_memory.py  research_assistant.py
demos/04_langgraph/: 01_langgraph_core.py  02_agent_handoffs.py  03_first_graph.py  04_conditional_edges.py  05_cycles_loops.py  06_human_in_loop.py  07_checkpointing.py
demos/05_multiagents/: 01_tool_calling_agent.py  02_supervisor_agent.py  03_parallel_agents.py  04_agent_communication.py  agent_communication.py  hierarchical_agents.py  multi_agent_research_system.py  parallel_agents.py
demos/06_production_llms/: cost_optimization.py  error_handling.py  monitoring.py  security_patterns.py  testing_patterns.py
docs/: AI_Sentry_Slack_Integration_Guide.md
llms/: basic_chat_llm.ipynb
projects/agents/ai-job-search/: README.md  agent.py  llm.py  main.py  pyproject.toml  tools.py
projects/agents/ecommerce-agent/: pyproject.toml
projects/rag-systems/blog-analyzer/: main.py
projects/rag-systems/documentation-helper/: core.py
rag-systems/blog-analyzer/: test_embeddings.py
rag-systems/documentation-helper/: README.md  main.py  pyproject.toml
rag/blog-analyzer/: pyproject.toml
rag/documentation-helper/: ingestion.py
rag/production-rag-system/: README.md
