[project]
name = "ai-projects"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "black>=26.5.1",
    "grandalf>=0.8",
    "huggingface-hub>=1.19.0",
    "isort>=8.0.1",
    "langchain>=1.3.9",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.5",
    "langsmith>=0.8.15",
    "pinecone>=7.3.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
]
