[project]
name = "agent-executor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "langchain>=1.3.9",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.5",
    "python-dotenv>=1.2.2",
]
