[project]
name = "blog-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "black>=26.5.1",
    "huggingface-hub>=1.18.0",
    "isort>=8.0.1",
    "langchain>=1.3.4",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.2",
    "langsmith>=0.8.9",
    "pinecone>=7.3.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
